...
    // setup custom back button for navigation
    private func setupBackButton() {
        backButton.setBackgroundImage(UIImage(named: "leftArrowIcon"), for: .normal)
        backButton.addAction(UIAction(handler: {[weak self] _ in
            self?.navigationController?.popViewController(animated: true)
        }), for: .touchUpInside)
        backButton.accessibilityIdentifier = "leaderboardPageBackButton"
        
        view.bringSubviewToFront(backButton)
    }
    
    // setup leaderboard UITableView
    private func setupLeaderboardTableView() {
...
