...
    // setup custom back button for navigation
    private func setupBackButton() {
        backButton.setBackgroundImage(UIImage(named: "leftArrowIcon"), for: .normal)
        backButton.addAction(UIAction(handler: {[weak self] _ in
            self?.navigationController?.popViewController(animated: true)
        }), for: .touchUpInside)
        backButton.accessibilityIdentifier = "pickCharacterPageBackButton"
        view.bringSubviewToFront(backButton)
    }
    
    // setup picked characters stack view
    private func setupPickedCharactersStackView() {
        player1Container = UIImageView(image: viewModel.cellBackground)
...
